fixed spacing of client cards

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -302,6 +302,7 @@ a {
 .container-four {
     max-width: 960px;
     width: 100%;
+    max-width: 1120px;
     h2 {
         text-align: center;
     }
